# tonio

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
bench/: README.md  benchmarks.py  runbench.sh
bench/harness/: net_client.py
bench/templates/: _net_table.tpl  main.md
src/: blocking.rs  errors.rs  events.rs  fd.rs  handles.rs  io.rs  lib.rs  proc.rs  py.rs  runtime.rs  scope.rs  sync.rs  time.rs  work.rs
src/io/: mod.rs  py.rs  schedule.rs  source.rs
src/net/: mod.rs  socket.rs  tls.rs
tests/: conftest.py  test_blocking.py  test_context.py  test_ctl.py  test_scope.py  test_subprocess.py  test_sync.py  test_time.py
tests/colored/: test_colored_blocking.py  test_colored_context.py  test_colored_ctl.py  test_colored_scope.py  test_colored_subprocess.py  test_colored_sync.py  test_colored_time.py
tests/net/: test_socket.py  test_ssl.py  test_streams.py  test_tls.py
tonio/: __init__.py  _backend.py  _ctl.py  _deco.py  _events.py  _fd.py  _runtime.py  _scope.py  _signals.py  _streams.py  _subprocess.py  _sync.py  _time.py  _tonio.pyi  exceptions.py  signals.py  time.py
tonio/_asyncio_backend/: __init__.py  _events.py  _net.py  _runtime.py  _scope.py  _sync.py  exceptions.py
tonio/_colored/: __init__.py  _ctl.py  _events.py  _fd.py  _scope.py  _subprocess.py  _sync.py  _time.py
tonio/_net/: _hilvl.py  _socket.py  _streams.py  _tls.py
tonio/_stdlib_fallback/: __init__.py  _net.py
tonio/_testutils/: _pytest_plugin.py
tonio/colored/: __init__.py  (+3 more)
(+30 files in other folders)
